Updating OpenAPI spec and Helm chart
